tests/rosetta/out/C/abbreviations-easy.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:39Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:39Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
list_string fields(char *s) {
  list_string words = list_string_create(0);
  __auto_type cur = "";
  __auto_type i = 0;
  while (i < strlen(s)) {
    __auto_type ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\n" || ch == "\t") {
      if (strlen(cur) > 0) {
        list_string tmp1 = list_string_create(1);
        tmp1.data[0] = cur;
        list_string tmp2 = concat_list_string(words, tmp1);
        words = tmp2;
        cur = "";
      }
    } else {
      char *tmp3 = concat_string(cur, ch);
      cur = tmp3;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp4 = list_string_create(1);
    tmp4.data[0] = cur;
    list_string tmp5 = concat_list_string(words, tmp4);
    words = tmp5;
  }
  return words;
}

char *padRight(char *s, int width) {
  __auto_type out = s;
  __auto_type i = strlen(s);
  while (i < width) {
    char *tmp6 = concat_string(out, " ");
    out = tmp6;
    i = i + 1;
  }
  return out;
}

char *join(list_string xs, char *sep) {
  __auto_type res = "";
  __auto_type i = 0;
  while (i < xs.len) {
    if (i > 0) {
      char *tmp7 = concat_string(res, sep);
      res = tmp7;
    }
    char *tmp8 = concat_string(res, xs.data[i]);
    res = tmp8;
    i = i + 1;
  }
  return res;
}

list_string validate(list_string commands, list_string words, list_int mins) {
  list_string results = list_string_create(0);
  if (words.len == 0) {
    return results;
  }
  __auto_type wi = 0;
  while (wi < words.len) {
    __auto_type w = words.data[wi];
    __auto_type found = 0;
    __auto_type wlen = strlen(w);
    __auto_type ci = 0;
    while (ci < commands.len) {
      __auto_type cmd = commands.data[ci];
      if (mins.data[ci] != 0 && wlen >= mins.data[ci] && wlen <= strlen(cmd)) {
        __auto_type c = upper(cmd);
        __auto_type ww = upper(w);
        if ((strcmp(slice_string(c, 0, wlen), ww) == 0)) {
          list_string tmp9 = list_string_create(1);
          tmp9.data[0] = c;
          list_string tmp10 = concat_list_string(results, tmp9);
          results = tmp10;
          found = 1;
          break;
        }
      }
      ci = ci + 1;
    }
    if ((!found)) {
      list_string tmp11 = list_string_create(1);
      tmp11.data[0] = "*error*";
      list_string tmp12 = concat_list_string(results, tmp11);
      results = tmp12;
    }
    wi = wi + 1;
  }
  return results;
}

int mochi_main() {
  char *tmp13 = concat_string("Add ALTer  BAckup Bottom  CAppend Change "
                              "SCHANGE  CInsert CLAst COMPress Copy ",
                              "COUnt COVerlay CURsor DELete CDelete Down "
                              "DUPlicate Xedit EXPand EXTract Find ");
  char *tmp14 =
      concat_string(tmp13, "NFind NFINDUp NFUp CFind FINdup FUp FOrward GET "
                           "Help HEXType Input POWerinput ");
  char *tmp15 =
      concat_string(tmp14, " Join SPlit SPLTJOIN  LOAD  Locate CLocate  "
                           "LOWercase UPPercase  LPrefix MACRO ");
  char *tmp16 = concat_string(tmp15, "MErge MODify MOve MSG Next Overlay PARSE "
                                     "PREServe PURge PUT PUTD  Query  QUIT ");
  char *tmp17 =
      concat_string(tmp16, "READ  RECover REFRESH RENum REPeat  Replace "
                           "CReplace  RESet  RESTore  RGTLEFT ");
  char *tmp18 = concat_string(tmp17, "RIght LEft  SAVE  SET SHift SI  SORT  "
                                     "SOS  STAck STATus  TOP TRAnsfer TypeUp ");
  __auto_type table = tmp18;
  __auto_type commands = fields(table);
  list_int mins = list_int_create(0);
  __auto_type i = 0;
  while (i < commands.len) {
    __auto_type count = 0;
    __auto_type j = 0;
    __auto_type cmd = commands.data[i];
    while (j < strlen(cmd)) {
      __auto_type ch = slice_string(cmd, j, j + 1);
      if ((strcmp(ch, "A") >= 0) && ch <= "Z") {
        count = count + 1;
      }
      j = j + 1;
    }
    mins = 0;
    i = i + 1;
  }
  __auto_type sentence =
      "riG   rePEAT copies  put mo   rest    types   fup.    6       poweRin";
  __auto_type words = fields(sentence);
  __auto_type results = validate(commands, words, mins);
  __auto_type out1 = "user words:  ";
  __auto_type k = 0;
  while (k < words.len) {
    char *tmp19 =
        concat_string(out1, padRight(words.data[k], results.data[k].len));
    char *tmp20 = concat_string(tmp19, " ");
    out1 = tmp20;
    k = k + 1;
  }
  printf("%s\n", out1);
  char *tmp21 = concat_string("full words:  ", join(results, " "));
  printf("%s\n", tmp21);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
